removed incorrect abuseipdb logic

--- a/.env.template
+++ b/.env.template
@@ -15,9 +15,9 @@ Shodan API Key (Free tier: 100 results/month)
 Get yours at: https://account.shodan.io/register
 SHODAN_API_KEY=your_shodan_api_key_here
 
-AbuseIPDB API - Community-driven IP abuse reporting
-Get your free API key at: https://www.abuseipdb.com/account/api
-ABUSEIPDB_API_KEY=your_abuseipdb_api_key_here
+# AbuseIPDB API - Community-driven IP abuse reporting
+# Get your free API key at: https://www.abuseipdb.com/account/api
+# ABUSEIPDB_API_KEY=your_abuseipdb_api_key_here
 
 =============================================================================
 IPInfo Specific Configuration
