--- a/.env.template
+++ b/.env.template
@@ -93,8 +93,8 @@ Application name for session management
 APP_NAME=ip-enricher-agent
 
 API Key for LLM being used
-GOOGLE_GENAI_USE_VERTEXAI = FALSE
-GOOGLE_API_KEY = your_google_api_key_here
+GOOGLE_GENAI_USE_VERTEXAI=FALSE
+GOOGLE_API_KEY=your_google_api_key_here
 
 =============================================================================
 LOGGING CONFIGURATION
