--- a/.env.template
+++ b/.env.template
@@ -1,270 +1,282 @@
-Environment Variables Template for Google ADK IP Tool Integration
-Copy this file to .env and update with your actual values
-=============================================================================
-API KEYS - Obtain these from respective service providers
-=============================================================================
-IPInfo API Key (Free tier: 50,000 requests/month)
-Get yours at: https://ipinfo.io/signup
+# Environment Variables Template for Google ADK IP Tool Integration
+# Copy this file to .env and update with your actual values
+# =============================================================================
+# API KEYS - Obtain these from respective service providers
+# =============================================================================
+# IPInfo API Key (Free tier: 50,000 requests/month)
+# Get yours at: https://ipinfo.io/signup
 IPINFO_API_KEY=your_ipinfo_api_key_here
 
-VirusTotal API Key (Free tier: 500 requests/day)
-Get yours at: https://www.virustotal.com/gui/join-us
+# VirusTotal API Key (Free tier: 500 requests/day)
+# Get yours at: https://www.virustotal.com/gui/join-us
 VIRUSTOTAL_API_KEY=your_virustotal_api_key_here
 
-Shodan API Key (Free tier: 100 results/month)
-Get yours at: https://account.shodan.io/register
+# Shodan API Key (Free tier: 100 results/month)
+# Get yours at: https://account.shodan.io/register
 SHODAN_API_KEY=your_shodan_api_key_here
 
 # AbuseIPDB API - Community-driven IP abuse reporting
 # Get your free API key at: https://www.abuseipdb.com/account/api
 # ABUSEIPDB_API_KEY=your_abuseipdb_api_key_here
 
-=============================================================================
-IPInfo Specific Configuration
-=============================================================================
+# =============================================================================
+# IPInfo Specific Configuration
+# =============================================================================
 IPINFO_INCLUDE_PRIVACY=TRUE
 IPINFO_INCLUDE_ASN=TRUE
 
-=============================================================================
-VirusTotal Specific Configuration
-=============================================================================
+# =============================================================================
+# VirusTotal Specific Configuration
+# =============================================================================
 VT_RELATIONSHIP_LIMIT=10
 VT_INCLUDE_DETAILS=TRUE
 
-=============================================================================
-Shodan Specific Configuration
-=============================================================================
+# =============================================================================
+# Shodan Specific Configuration
+# =============================================================================
 SHODAN_INCLUDE_PORTS=TRUE
 SHODAN_INCLUDE_VULNS=TRUE
 SHODAN_INCLUDE_TAGS=TRUE
 
-=============================================================================
-AbuseIPDB Specific Configuration
-=============================================================================
-Maximum age of reports to consider (1-365 days)
-ABUSEIPDB_MAX_AGE_DAYS=90
+# =============================================================================
+# Azure Sentinel Configuration
+# =============================================================================
 
-Include verbose report details in responses
-ABUSEIPDB_VERBOSE=TRUE
+AZURE_TENANT_ID=
+AZURE_SUBSCRIPTION_ID=
+AZURE_RESOURCE_GROUP=
+AZURE_SENTINEL_WORKSPACE_ID=
+AZURE_SENTINEL_WORKSPACE_NAME=
 
-Minimum confidence threshold for considering IP as malicious (0-100%)
-ABUSEIPDB_CONFIDENCE_THRESHOLD=25
+# =============================================================================
+# AbuseIPDB Specific Configuration
+# =============================================================================
+# Maximum age of reports to consider (1-365 days)
+# ABUSEIPDB_MAX_AGE_DAYS=90
 
-Rate limit buffer to avoid hitting API limits
-ABUSEIPDB_RATE_LIMIT_BUFFER=5
+# Include verbose report details in responses
+# ABUSEIPDB_VERBOSE=TRUE
 
-=============================================================================
-API CONFIGURATION
-=============================================================================
-API request timeout in seconds
+# Minimum confidence threshold for considering IP as malicious (0-100%)
+# ABUSEIPDB_CONFIDENCE_THRESHOLD=25
+
+# Rate limit buffer to avoid hitting API limits
+# ABUSEIPDB_RATE_LIMIT_BUFFER=5
+
+# =============================================================================
+# API CONFIGURATION
+# =============================================================================
+# API request timeout in seconds
 API_TIMEOUT=10
 
-Maximum number of retry attempts for failed API calls
+# Maximum number of retry attempts for failed API calls
 MAX_RETRIES=3
 
-Maximum concurrent API requests (for batch operations)
+# Maximum concurrent API requests (for batch operations)
 MAX_CONCURRENT_REQUESTS=10
 
-=============================================================================
-REDIS CACHE CONFIGURATION
-=============================================================================
-Redis server hostname or IP address
+# =============================================================================
+# REDIS CACHE CONFIGURATION
+# =============================================================================
+# Redis server hostname or IP address
 REDIS_HOST=localhost
 
-Redis server port
+# Redis server port
 REDIS_PORT=6379
 
-Redis database number (0-15)
+# Redis database number (0-15)
 REDIS_DB=0
 
-Redis password (leave empty if no authentication required)
+# Redis password (leave empty if no authentication required)
 REDIS_PASSWORD=
 
-Cache time-to-live in seconds (86400 = 24 hours)
+# Cache time-to-live in seconds (86400 = 24 hours)
 CACHE_TTL=86400
 
-=============================================================================
-GOOGLE ADK CONFIGURATION
-=============================================================================
-Google ADK model to use
+# =============================================================================
+# GOOGLE ADK CONFIGURATION
+# =============================================================================
+# Google ADK model to use
 ADK_MODEL=gemini-2.0-flash
 
-Application name for session management
+# Application name for session management
 APP_NAME=ip-enricher-agent
 
-API Key for LLM being used
+# API Key for LLM being used
 GOOGLE_GENAI_USE_VERTEXAI=FALSE
 GOOGLE_API_KEY=your_google_api_key_here
 
-=============================================================================
-LOGGING CONFIGURATION
-=============================================================================
-Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+# =============================================================================
+# LOGGING CONFIGURATION
+# =============================================================================
+# Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
 
-Log format string
+# Log format string
 LOG_FORMAT=%(asctime)s %(levelname)s [%(name)s]: %(message)s
 
-=============================================================================
-FEATURE FLAGS
-=============================================================================
-Enable Redis caching (true/false)
+# =============================================================================
+# FEATURE FLAGS
+# =============================================================================
+# Enable Redis caching (true/false)
 ENABLE_CACHE=true
 
-Enable individual services (true/false)
+# Enable individual services (true/false)
 ENABLE_IPINFO=true
 ENABLE_VIRUSTOTAL=true
 ENABLE_SHODAN=true
 
-=============================================================================
-DEVELOPMENT SETTINGS (Optional)
-=============================================================================
-Enable debug mode for development
+# =============================================================================
+# DEVELOPMENT SETTINGS (Optional)
+# =============================================================================
+# Enable debug mode for development
 DEBUG=false
 
-Custom user agent for API requests
+# Custom user agent for API requests
 USER_AGENT=google-adk-ip-enricher/1.0
 
-Rate limiting settings (requests per minute)
+# Rate limiting settings (requests per minute)
 RATE_LIMIT_IPINFO=1000
 RATE_LIMIT_VIRUSTOTAL=4
 RATE_LIMIT_SHODAN=1
 
-=============================================================================
-GOOGLE CLOUD CONFIGURATION (For ADK deployment)
-=============================================================================
-Google Cloud Project ID (for ADK deployment)
+# =============================================================================
+# GOOGLE CLOUD CONFIGURATION (For ADK deployment)
+# =============================================================================
+# Google Cloud Project ID (for ADK deployment)
 GOOGLE_CLOUD_PROJECT=your-project-id
-Google Cloud Region (for ADK deployment)
+
+# Google Cloud Region (for ADK deployment)
 GOOGLE_CLOUD_REGION=us-central1
-Service Account Key Path (for authentication)
+
+# Service Account Key Path (for authentication)
 GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account-key.json
 
-=============================================================================
-ADVANCED CONFIGURATION (Optional)
-=============================================================================
-Custom cache key prefix
+# =============================================================================
+# ADVANCED CONFIGURATION (Optional)
+# =============================================================================
+# Custom cache key prefix
 CACHE_KEY_PREFIX=ip_enricher
 
-Enable metrics collection
+# Enable metrics collection
 ENABLE_METRICS=true
 
-Metrics export interval in seconds
+# Metrics export interval in seconds
 METRICS_INTERVAL=300
 
-Maximum IP addresses per batch request
+# Maximum IP addresses per batch request
 MAX_BATCH_SIZE=100
 
-Request retry backoff multiplier
+# Request retry backoff multiplier
 RETRY_BACKOFF_MULTIPLIER=2
 
-Enable request/response logging
+# Enable request/response logging
 ENABLE_REQUEST_LOGGING=false
 
-Custom timeout for specific services (in seconds)
+# Custom timeout for specific services (in seconds)
 IPINFO_TIMEOUT=10
 VIRUSTOTAL_TIMEOUT=15
 SHODAN_TIMEOUT=20
 
 
-=============================================================================
-Threat Analysis Configuration
-=============================================================================
-Threshold for determining malicious IPs (0-100%)
+# =============================================================================
+# Threat Analysis Configuration
+# =============================================================================
+# Threshold for determining malicious IPs (0-100%)
 MALICIOUS_THRESHOLD=50
 
-Threshold for high-risk classification (0-100%)
+# Threshold for high-risk classification (0-100%)
 HIGH_RISK_THRESHOLD=75
 
-Enable geographic risk analysis
+# Enable geographic risk analysis
 ENABLE_GEO_RISK=TRUE
 
-High-risk countries (ISO 3166 alpha-2 codes)
+# High-risk countries (ISO 3166 alpha-2 codes)
 HIGH_RISK_COUNTRIES=CN,RU,KP,IR,PK
 
-Suspicious ASN numbers (comma-separated)
+# Suspicious ASN numbers (comma-separated)
 SUSPICIOUS_ASNS=
 
-=============================================================================
-Agent System Configuration
-=============================================================================
-Enable parallel processing of multiple intelligence sources
+# =============================================================================
+# Agent System Configuration
+# =============================================================================
+# Enable parallel processing of multiple intelligence sources
 ENABLE_PARALLEL=TRUE
 
-Maximum time for complete analysis (seconds)
+# Maximum time for complete analysis (seconds)
 MAX_ANALYSIS_TIME=300
 
-Enable detailed logging for debugging
+# Enable detailed logging for debugging
 ENABLE_DETAILED_LOGGING=TRUE
 
-=============================================================================
-Development and Testing
-=============================================================================
-Set to TRUE for development mode
+# =============================================================================
+# Development and Testing
+# =============================================================================
+# Set to TRUE for development mode
 DEBUG_MODE=FALSE
 
-Test IP addresses for validation
+# Test IP addresses for validation
 TEST_IPV4=8.8.8.8
 TEST_IPV6=2001:4860:4860::8888
 
-=============================================================================
-Performance Monitoring
-=============================================================================
-Enable performance metrics collection
+# =============================================================================
+# Performance Monitoring
+# =============================================================================
+# Enable performance metrics collection
 ENABLE_METRICS=TRUE
 
-Metrics collection interval (seconds)
+# Metrics collection interval (seconds)
 METRICS_INTERVAL=60
 
-=============================================================================
-Security Configuration
-=============================================================================
+# =============================================================================
+# Security Configuration
+# =============================================================================
 
-Enable request rate limiting
+# Enable request rate limiting
 ENABLE_RATE_LIMITING=TRUE
 
-Maximum requests per minute per source
+# Maximum requests per minute per source
 RATE_LIMIT_PER_MINUTE=60
 
-Enable IP validation before processing
+# Enable IP validation before processing
 ENABLE_IP_VALIDATION=TRUE
 
-=============================================================================
-Cache Configuration
-=============================================================================
+# =============================================================================
+# Cache Configuration
+# =============================================================================
 
-Enable intelligent cache warming
+# Enable intelligent cache warming
 ENABLE_CACHE_WARMING=FALSE
 
-Cache cleanup interval (seconds)
+# Cache cleanup interval (seconds)
 CACHE_CLEANUP_INTERVAL=3600
 
-Maximum cache size (MB)
+# Maximum cache size (MB)
 MAX_CACHE_SIZE=1024
 
-=============================================================================
-Advanced Features
-=============================================================================
-Enable machine learning threat scoring
+# =============================================================================
+# Advanced Features
+# =============================================================================
+# Enable machine learning threat scoring
 ENABLE_ML_SCORING=FALSE
 
-Enable automated threat reporting
+# Enable automated threat reporting
 ENABLE_AUTO_REPORTING=FALSE
 
-Enable real-time threat feeds
+# Enable real-time threat feeds
 ENABLE_REALTIME_FEEDS=FALSE
 
-=============================================================================
-Integration Settings
-=============================================================================
-Enable webhook notifications
+# =============================================================================
+# Integration Settings
+# =============================================================================
+# Enable webhook notifications
 ENABLE_WEBHOOKS=FALSE
 
-Webhook URL for threat notifications
+# Webhook URL for threat notifications
 WEBHOOK_URL=
 
-Enable SIEM integration
+# Enable SIEM integration
 ENABLE_SIEM=FALSE
 
-SIEM endpoint URL
+# SIEM endpoint URL
 SIEM_ENDPOINT=
