--- a/.env.template
+++ b/.env.template
@@ -17,7 +17,7 @@ SHODAN_API_KEY=your_shodan_api_key_here
 
 # AbuseIPDB API - Community-driven IP abuse reporting
 # Get your free API key at: https://www.abuseipdb.com/account/api
-# ABUSEIPDB_API_KEY=your_abuseipdb_api_key_here
+ABUSEIPDB_API_KEY=your_abuseipdb_api_key_here
 
 # =============================================================================
 # IPInfo Specific Configuration
@@ -52,16 +52,16 @@ AZURE_SENTINEL_WORKSPACE_NAME=
 # AbuseIPDB Specific Configuration
 # =============================================================================
 # Maximum age of reports to consider (1-365 days)
-# ABUSEIPDB_MAX_AGE_DAYS=90
+ABUSEIPDB_MAX_AGE_DAYS=90
 
 # Include verbose report details in responses
-# ABUSEIPDB_VERBOSE=TRUE
+ABUSEIPDB_VERBOSE=TRUE
 
 # Minimum confidence threshold for considering IP as malicious (0-100%)
-# ABUSEIPDB_CONFIDENCE_THRESHOLD=25
+ABUSEIPDB_CONFIDENCE_THRESHOLD=25
 
 # Rate limit buffer to avoid hitting API limits
-# ABUSEIPDB_RATE_LIMIT_BUFFER=5
+ABUSEIPDB_RATE_LIMIT_BUFFER=5
 
 # =============================================================================
 # API CONFIGURATION
